--- a/views/Ot.hbs
+++ b/views/Ot.hbs
@@ -51,6 +51,15 @@
       }
     });
 
+    $( "#desc_resp" ).autocomplete({
+      source: "/Combosresponsable",
+      minLength: 1,
+      select: function( event, ui ) {
+        log( "Selected: " + ui.item.value + " : " + ui.item.label );
+        $("#id_resp").val(ui.item.value1);
+      }
+    });
+
     $( "#desc_status" ).autocomplete({
       source: "/Combosstatus",
       minLength: 1,
