edicion actualizacion eliminacion ot

--- a/views/Ot.hbs
+++ b/views/Ot.hbs
@@ -117,8 +117,8 @@
                 <input type="hidden" id="cod_status" name="cod_status" class="form-comtrol  ImputMaestros">
             </div>   
             <div class="col-md-12 col-sm-12 col-xs-12">
-                <label class="col-xs-12" for="observac"><h4>Observaciones</h4></label>                         
-                <textarea class="form-control ImputMaestros" rows="5" id="comment"></textarea>                                
+                <label class="col-xs-12" for="cod_observac"><h4>Observaciones</h4></label>                         
+                <textarea class="form-control ImputMaestros" rows="5" id="cod_observac" name="cod_observac"></textarea>                                
             </div>                                                  
         </div>             
         <div class="btn-group" id="botones">                    
