Consulta multiple ot

--- a/views/Ot.hbs
+++ b/views/Ot.hbs
@@ -11,6 +11,7 @@
       minLength: 1,
       select: function( event, ui ) {
         log( "Selected: " + ui.item.value1 + " : " + ui.item.label ); 
+        $("#cod_OT").val(ui.item.value1);
         $("#id_resp").val(ui.item.value2);
         $("#cod_area").val(ui.item.value3);
         $("#cod_status").val(ui.item.value4);
@@ -22,14 +23,15 @@
         $("#cod_hes").val(ui.item.value10);
         $("#cod_valor").val(ui.item.value11);
         $("#cod_observac").val(ui.item.value12);
-        
         $("#desc_resp").val(ui.item.value22);
+      /*  
+        
         $("#desc_area").val(ui.item.value33);
         $("#desc_status").val(ui.item.value44);
         $("#desc_equipo").val(ui.item.value55);
         $("#desc_service").val(ui.item.value66);
         $("#desc_ccosto").val(ui.item.value77);
-        $("#desc_clie").val(ui.item.value88);
+        $("#desc_clie").val(ui.item.value88);*/
         
 
        
