--- a/views/Ot.hbs
+++ b/views/Ot.hbs
@@ -24,17 +24,12 @@
         $("#cod_valor").val(ui.item.value11);
         $("#cod_observac").val(ui.item.value12);
         $("#desc_resp").val(ui.item.value22);
-      /*  
-        
         $("#desc_area").val(ui.item.value33);
         $("#desc_status").val(ui.item.value44);
         $("#desc_equipo").val(ui.item.value55);
         $("#desc_service").val(ui.item.value66);
         $("#desc_ccosto").val(ui.item.value77);
-        $("#desc_clie").val(ui.item.value88);*/
-        
-
-       
+        $("#desc_clie").val(ui.item.value88);
       }
     });
 
