--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -10,7 +10,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="#">Logotipo</a>
+    <a class="navbar-brand" href="/Logout">Logout</a>
   </div>
  
   <!-- Agrupar los enlaces de navegación, los formularios y cualquier
