--- a/views/Ot.hbs
+++ b/views/Ot.hbs
@@ -11,6 +11,8 @@
       minLength: 1,
       select: function( event, ui ) {
         log( "Selected: " + ui.item.value1 + " : " + ui.item.label ); 
+        $('#guardarot').hide();
+	      $('#editarot').show();
         $("#cod_OT").val(ui.item.value1);
         $("#id_resp").val(ui.item.value2);
         $("#cod_area").val(ui.item.value3);
@@ -19,7 +21,11 @@
         $("#cod_service").val(ui.item.value6);
         $("#cod_ccosto").val(ui.item.value7);
         $("#id_clie").val(ui.item.value8);
-        $("#fec_OT").val(ui.item.value9);
+       // var dia = ui.item.value9.getDate(); 
+       // var mes =  ("0" + (ui.item.value9.getMonth() + 1));
+       // var anio = ui.item.value9.getFullYear();
+       // var fechatotal = dia + "/"+ mes +"/" + anio
+        $("#fec_OT").val(ui.item.value9); //html('fechatotal');
         $("#cod_hes").val(ui.item.value10);
         $("#cod_valor").val(ui.item.value11);
         $("#cod_observac").val(ui.item.value12);
@@ -38,7 +44,7 @@
       minLength: 1,
       select: function( event, ui ) {
         log( "Selected: " + ui.item.value + " : " + ui.item.label );
-        $("#cod_area").val(ui.item.value1);
+        $("#cod_area").val(ui.item.value1);        
       }
     });
 
@@ -146,15 +152,15 @@
             <div class="col-md-12 col-sm-12 col-xs-12">
                 <label class="col-xs-12" for="cod_observac"><h4>Observaciones</h4></label>                         
                 <textarea class="form-control ImputMaestros" rows="5" id="cod_observac" name="cod_observac"></textarea>                                
-            </div>                                                  
-        </div>             
-        <div class="btn-group" id="botones">                    
-            <button type="button" class="btn btn-primary center-block" id="guardar1" onclick="guardar()">Guardar</button>
-            <button type="button" class="btn btn-primary center-block" id="editar" onclick="actualizar()">Actualizar</button>                
-            <button type="button" class="btn btn-primary center-block" id="cancelar" onclick="cancel()">Cancelar</button>                				
-            <button type="button" class="btn btn-primary center-block" onclick="agregar()">Nuevo Producto</button>
-        </div>    
+            </div>                                                          
+        </div>              
     </form>
-                        
+     <div class="col-md-12 col-sm-12 col-xs-12">
+      <div class="btn-group" id="botones">                    
+          <button type="button" class="btn btn-primary" id="guardarot" onclick="guardarot()">Guardar</button>
+          <button type="button" class="btn btn-primary" id="editarot" onclick="actualizarot()">Actualizar</button>                
+          <button type="button" class="btn btn-primary" id="cancelarot" onclick="cancelot()">Cancelar</button>               				            
+      </div> 
+    </div>                    
 </fieldset>
 
