funciones ok guardar editar eliminar OT

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -345,3 +345,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#499bea', end
 #editarot{
   display: none;
 }
+#eliminarot{
+  display: none;
+}
