ApiRest funcional validacion email

--- a/views/Clientes.hbs
+++ b/views/Clientes.hbs
@@ -82,7 +82,7 @@
             <div class="form-group">
                 <div class="col-md-12 col-sm-1 col-xs-12">      
                     <label class="col-xs-3" for="email_clie"><h4 class="text-left">Email</h4></label>                            
-                    <input type="text" id="email_clie" size="40" name="email_clie" class="form-comtrol  ImputMaestros col-xs-8" placeholder="Email" onkeypress="return validemail(event)">                             
+                    <input type="text" id="email_clie" size="40" name="email_clie" class="form-comtrol  ImputMaestros col-xs-8" placeholder="Email" onkeypress="return validaremailfinal(event)">                             
                 </div>
             </div>
             <div class="form-group">
