--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,7 @@
  <div id="login" class="container login">    
     <div class="row">
         <div class="col-xs-4 col-xs-offset-4">
-            <img src="imagenes/ICON/avataresMH.png" class="logo center-block">
+            <img alt="Avartar hombre mujer" src="imagenes/ICON/avataresMH.png" class="logo center-block">
         </div>
     </div>
     <div class="espaciado">
