--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -30,11 +30,12 @@
         <li><a class="dropdown-item"><a href="/Estados">Estados</a></li>
         <li><a class="dropdown-item"><a href="/Responsables">Pesponsables</a></li>
         <li><a class="dropdown-item" href="/Servicios">Servicios</a></li>            
-        <li class="divider"></li>
-        <li ><a href="#">Admin</a></li>
+        <!--<li class="divider"></li>  Este menú por tiempo queda en espera
+        <li ><a href="#">Admin</a></li>-->
       </ul>
     </li>
-            <li class="dropdown">
+    <!--   Este menú por tiempo queda en espera
+    <li class="dropdown">
       <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><h4>Reportes<span class="caret"> &nbsp;</span></h4>
       </a>
       <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenuButton">
@@ -46,7 +47,7 @@
         <li class="divider"></li>
         <li ><a href="#">OT Parcial</a></li>
       </ul>
-    </li>    
+    </li>    -->
   </ul>
   </div><!-- /.navbar-collapse --> 
 </nav>
