--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,12 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!-- <html xmlns="http://www.w3.org/1999/xhtml"> -->
+<html lang="es">
 <head>
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Documento sin t&iacute;tulo</title>
 <script src="js/jquery.min.js" type="text/javascript"></script>
-<script src="js/stacktable.js"> type="text/javascript"</script>
+<!--<script src="js/stacktable.js"> type="text/javascript"</script>-->
 <link href="bootstrap/bootstrap.min.css" rel="stylesheet"/>    
 <link href="bootstrap/bootstrap-theme.css" rel="stylesheet"/>
 <script type="text/javascript" src="/bootstrapjs/bootstrap.min.js"></script>
